maybe not worth updating

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "bkgnd",
+        "currentposition",
         "Divs",
-        "rando"
+        "rando",
+        "validpath"
     ]
 }
